# suspension_study

./: README.md
.github/: copilot-instructions.md
.github/workflows/: backend.yml  frontend.yml
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/advisor/: rules.py
backend/app/api/: analyze.py  bikes.py  calibrate.py  compare.py  demo.py  sessions.py
backend/app/models/: analysis.py  bike.py  session.py
backend/app/processing/: calibration.py  displacement.py  histograms.py  pipeline.py  pitch.py  velocity.py
backend/app/simulator/: __init__.py  cli.py  csv_writer.py  noise.py  physics.py  scenarios.py  sensors.py
backend/app/storage/: bikes.py  demo.py  sessions.py
backend/tests/: conftest.py  test_advisor.py  test_calibration.py  test_displacement.py  test_histograms.py  test_pipeline.py  test_pitch.py  test_velocity.py
backend/tests/simulator/: csv_writer.py  noise.py  physics.py  scenarios.py  sensors.py
doc/: README.md  compression_damping_report.md  frontend_testing_plan.md  graphical_analysis_report.md  hardware_measurement_report.md  index.md  overview.md  pitch_angle_report.md  rebound_damping_report.md  velocity_calculation_report.md
doc/foundation/: README.md  displacement_translation_report.md  index.md  overview.md  spring_rate_preload_report.md
doc/implementation/: README.md  api_contract.md  backend_data_structures.md  c4_architecture.md  communication_architecture.md  implementation_roadmap.md
frontend/: package-lock.json  package.json  vitest.config.ts
scripts/: check_links.ps1
(+92 files in other folders)
