[project]
name = "suspension-study-backend"
version = "1.0.0"
description = "Motorcycle suspension DAQ post-processing backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "numpy>=1.26",
    "scipy>=1.13",
    "pandas>=2.2",
]

[project.scripts]
daq-simulate = "app.simulator.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx>=0.27",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
